[gd_scene load_steps=4 format=3 uid="uid://c5ejgk87rt7xa"]

[ext_resource type="FontFile" uid="uid://crkqtfwcd84jb" path="res://Assets/Textures/Fonts/Kenney Pixel Square.ttf" id="1_0scit"]
[ext_resource type="Script" path="res://Scripts/title_menu.gd" id="1_i00uq"]

[sub_resource type="LabelSettings" id="LabelSettings_8076n"]
font = ExtResource("1_0scit")
font_size = 25
font_color = Color(0, 0, 0, 1)

[node name="TitleMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i00uq")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 40.0
offset_right = 20.0
offset_bottom = 63.0
grow_horizontal = 2
text = "Whisperwood"
label_settings = SubResource("LabelSettings_8076n")

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -34.0
offset_top = -165.0
offset_right = 34.0
offset_bottom = -133.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_0scit")
text = "Start"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -115.0
offset_right = 26.0
offset_bottom = -83.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.99495, 1)
theme_override_fonts/font = ExtResource("1_0scit")
text = "Quit"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
